Vectorize spike-binning function.

--- a/2A_exc_info_flow.ipynb
+++ b/2A_exc_info_flow.ipynb
@@ -529,28 +529,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bin_spks(spks, t, del_t, max_one_spk):\n",
+    "def bin_spks(spks, t, del_t, max_one_spk, ignore_rmd=True):\n",
     "    \"\"\"Bin multi-variate spike train.\n",
     "    \n",
+    "    :param ignore_rmd: ignore final time bin if incomplete (i.e. if nonzero remainder)\n",
     "    :return: binned times, spks\n",
     "    \"\"\"\n",
-    "    t_bins = np.arange(t.min(), t.max() + np.mean(np.diff(t)), del_t)\n",
+    "    assert len(spks) == len(t)\n",
     "    \n",
-    "    t_binned = np.nan * np.zeros(len(t_bins) - 1)\n",
-    "    spks_binned = np.nan * np.zeros((len(t_bins) - 1, spks.shape[1]))\n",
+    "    # get approx num dt per time bin\n",
+    "    dt = np.mean(np.diff(t))\n",
+    "    n_dt = int(np.round(del_t/dt))\n",
     "    \n",
-    "    # loop over time bins\n",
-    "    for tb_ctr, (t_start, t_end) in enumerate(zip(t_bins[:-1], t_bins[1:])):\n",
-    "        \n",
-    "        t_mask = (t_start <= t) & (t < t_end)\n",
-    "        \n",
-    "        t_binned[tb_ctr] = t[t_mask].mean()\n",
-    "        spks_binned[tb_ctr, :] = spks[t_mask, :].sum(0)\n",
+    "    # convert 2D array to \"stacked\" 3D array\n",
+    "    ## get num layers\n",
+    "    n_layers = int(np.ceil(len(t) / n_dt))\n",
     "    \n",
-    "    if max_one_spk:\n",
+    "    ## get cut indicating start of last layer (which might be shorter than prev layers)\n",
+    "    cut = (n_layers-1) * n_dt\n",
+    "    \n",
+    "    ## init array\n",
+    "    spks_stacked = np.zeros((n_layers, n_dt, spks.shape[1]), dtype=bool)\n",
+    "    \n",
+    "    # #fill in all but final layer\n",
+    "    spks_stacked[:n_layers-1] = np.split(spks[:cut], n_layers-1)\n",
+    "    \n",
+    "    ## fill in final layer\n",
+    "    spks_stacked[-1][:len(spks) - cut] = spks[cut:]\n",
+    "    \n",
+    "    # repeat with time vec\n",
+    "    t_stacked = np.nan * np.zeros((n_layers, n_dt))\n",
+    "    t_stacked[:n_layers-1] = np.split(t[:cut], n_layers-1)\n",
+    "    t_stacked[-1][:len(spks) - cut] = t[cut:]\n",
+    "    \n",
+    "    # get binned spk cts by taking sum over middle axis\n",
+    "    spks_binned = np.sum(spks_stacked, 1)\n",
+    "    # get corresponding times (nanmean since last bin might be incomplete)\n",
+    "    t_binned = np.nanmean(t_stacked, 1)\n",
+    "    \n",
+    "    if max_one_spk: \n",
     "        spks_binned[spks_binned > 0] = 1\n",
     "        \n",
-    "    return spks_binned.astype(int), t_binned"
+    "    if len(t) % n_dt:\n",
+    "        return spks_binned[:-1].astype(int), t_binned[:-1]\n",
+    "    else:\n",
+    "        return spks_binned.astype(int), t_binned"
    ]
   },
   {
